# idris-vimscript

./: .gitignore  .hindent.yaml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  LICENSE  Makefile  README.md  idris-vim.cabal  idris-vimscript.cabal  stack.yaml  vimscript.ipkg
Vimscript/: Builtin.idr  FFI.idr  List.idr
codegen/: Main.hs
codegen/IRTS/: CodegenVim.hs
codegen/IRTS/CodegenVim/Internal/: ZEncoding.hs
codegen/Vimscript/: AST.hs  Optimise.hs  Render.hs
codegen/Vimscript/Optimise/: Annotate.hs  DCE.hs  TCO.hs
codegen/exe/: Main.hs
codegen/src/IRTS/: CodegenVim.hs
codegen/src/Vimscript/: Optimise.hs
codegen/src/Vimscript/Optimise/: DCE.hs  Renamer.hs
codegen/test/Vimscript/Optimise/: DCETest.hs
etc/: check-formatting.sh
examples/: lines.idr  loop.idr  misc.idr  tailrec.idr
lib/Vimscript/: Builtin.idr  Builtins.idr  Examples.idr  FFI.idr  List.idr
