Name:           idris-vimscript
Version:        0.0.1.0
License:        BSD3
License-file:   LICENSE
Author:         Oskar Wickström
Maintainer:	    Oskar Wickström <oskar.wickstrom@gmail.com>
Build-Type:	Simple
Cabal-Version:  >= 1.8

Library
  hs-source-dirs: codegen/src

  Build-depends:  idris >= 1.2 && < 1.3
                , base
                , containers
                , directory
                , filepath
                , hashable
                , mainland-pretty
                , mtl
                , unordered-containers
                , text
                , transformers
                , uniplate

  exposed-modules:  IRTS.CodegenVim
                    Vimscript.AST
                    Vimscript.Render
                    Vimscript.Optimise
                    Vimscript.Optimise.DCE
                    Vimscript.Optimise.TCO
                    Vimscript.Optimise.Annotate
                    Vimscript.Optimise.Renamer
                    IRTS.CodegenVim.Internal.ZEncoding

  ghc-options:      -Wall


Executable idris-codegen-vim
  main-is:        Main.hs
  hs-source-dirs: codegen/exe

  build-depends:  idris >= 1.2 && < 1.3
                , base
                , containers
                , directory
                , filepath
                , idris-vimscript
  ghc-options:      -threaded -Wall

Test-Suite idris-vimscript-tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  codegen/test
    main-is:         Main.hs
    other-modules:   Vimscript.Optimise.DCETest
    build-depends:   base            >= 4        && < 5
                   , idris           >= 1.2 && < 1.3
                   , idris-vimscript
                   , tasty
                   , tasty-hunit
                   , tasty-hspec
                   , tasty-discover
